syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/v4/x/gitopia/types";

import "gogoproto/gogo.proto";
import "gitopia/whois.proto";

message Repository {
  string creator = 1;
  uint64 id = 2;
  string name = 3; 
  RepositoryOwner owner = 4; 
  string description = 5; 
  repeated uint64 forks = 6; 
  string subscribers = 7; 
  string commits = 8;
  uint64 issuesCount = 9;
  uint64 pullsCount = 10;
  repeated RepositoryLabel labels = 11;
  uint64 labelsCount = 12;
  repeated RepositoryRelease releases = 13;
  int64 createdAt = 14;
  int64 updatedAt = 15;
  int64 pushedAt = 16;
  repeated uint64 stargazers = 17;
  bool archived = 18;
  string license = 19;
  string defaultBranch = 20;
  uint64 parent = 21;
  bool fork = 22;
  repeated RepositoryCollaborator collaborators = 23;
  bool allowForking = 24;
  repeated RepositoryBackup backups = 25;
  bool enableArweaveBackup = 26;
}

message RepositoryId {
  string id = 1;
  string name = 2;
}

message BaseRepositoryKey {
  uint64 id = 1;
  string address = 2;
  string name = 3;
}

message RepositoryOwner {
  string id = 1;
  OwnerType type = 2;
}

message IssueIid {
  uint64 iid = 1;
  uint64 id = 2;
}

message PullRequestIid {
  uint64 iid = 1;
  uint64 id = 2;
} 

message RepositoryCollaborator {
  string id = 1;
  enum Permission {
    READ = 0;
	  TRIAGE = 1;
	  WRITE = 2;
	  MAINTAIN = 3;
	  ADMIN = 4;
  }
  Permission permission = 2;
}

message RepositoryLabel {
  uint64 id = 1;
  string name = 2;
  string color = 3;
  string description = 4;
} 

message RepositoryRelease {
  uint64 id = 1;
  string tagName = 2;
}

message RepositoryBackup {
  enum Store {
    IPFS = 0;
    ARWEAVE = 1;
  }
  Store store = 1;
  repeated string refs = 2;
}
